# ragaai-catalyst

./: .gitignore  README.md  check.ipynb  pyproject.toml  requirements.txt
docs/: dataset_management.md  prompt_management.md
examples/: lite_llm_integration.ipynb  openai_integration.ipynb  prompt_management_litellm.ipynb  prompt_management_openai.ipynb
ragaai_catalyst/: __init__.py  _version.py  dataset.py  evaluation.py  experiment.py  guard_executor.py  guardrails_manager.py  internal_api_completion.py  prompt_manager.py  proxy_call.py  ragaai_catalyst.py  synthetic_data_generation.py  utils.py
ragaai_catalyst/tracers/: llamaindex_callback.py  tracer.py
ragaai_catalyst/tracers/exporters/: __init__.py  file_span_exporter.py  raga_exporter.py
ragaai_catalyst/tracers/instrumentators/: __init__.py  langchain.py  llamaindex.py  openai.py
ragaai_catalyst/tracers/utils/: __init__.py  utils.py
test/test_catalyst/: test_configuration.py  test_dataset.py  test_evaluation.py  test_prompt_manager.py  test_synthetic_data_generation.py
